# mcp

./: .gitignore  INSTALL.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  run_test.sh
src/awels_mcp/: __init__.py  cli.py  server.py
src/awels_mcp/pdf_processor/: __init__.py  processor.py
tests/: create_test_pdf.py  test_client.py  test_mcp_integration.py  test_mcp_server.py  test_pdf_processor.py  test_server.py
