[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awels-mcp"
version = "0.1.0"
description = "MCP server for PDF processing with docling - converts PDFs to Markdown with image extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Awels Team" },
]
keywords = ["mcp", "pdf", "docling", "markdown", "conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
awels-mcp-server = "awels_mcp.server:main"
awels-pdf-processor = "awels_mcp.cli:main"

[project.entry-points]
"awels_mcp" = {app = "awels_mcp.cli:app"}

[project.urls]
Homepage = "https://github.com/your-org/awels-mcp"
Repository = "https://github.com/your-org/awels-mcp.git"
Issues = "https://github.com/your-org/awels-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/awels_mcp"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true